styling der Website

--- a/src/main/resources/static/css/friendlist.css
+++ b/src/main/resources/static/css/friendlist.css
@@ -47,7 +47,7 @@
 }
 
 .contentFriend ul li span:nth-child(1) {
-  width: 140px;
+  width: 100px;
 }
 .contentFriend ul li span:nth-child(2) {
   width: 200px;
@@ -56,7 +56,7 @@
   width: 140px;
 }
 .contentFriend ul li span:nth-child(4) {
-  width: 200px;
+  width: 150px;
 }
 
 .listWith6ChildContent li span,
@@ -64,9 +64,29 @@
   text-align: center;
 }
 
+.unfriendBtn {
+  width: 42px;
+  background-color: #ff0000;
+  border-color: #cc0000;
+  height: 42px;
+  position: relative;
+  border-radius: 50px;
+  left: 25px;
+    margin-left: 20px;
+    margin-right: 80px;
+    cursor: pointer;
+    box-shadow: 1px 1px 4px #000000;
+}
+
 .icon img {
   width: 30px;
   height: 30px;
+  border: none;
+  margin-left: 11px;
+  margin-right: 20px;
+  margin-bottom: 7px;
+  position: relative;
+  cursor: pointer;
 }
 
 .onlinestatus-ONLINE {
