--- a/src/main/resources/templates/settings.html
+++ b/src/main/resources/templates/settings.html
@@ -202,7 +202,7 @@
         <form action="#" th:action="@{/delete}" method="post">
             <div class="buttons">
                 <div class="delete">
-                    <button class="profileDeleteBtn submitBtn"><i class="fas fa-trash-alt"></i> Profile löschen</button>
+                    <button class="profileDeleteBtn"><i class="fas fa-trash-alt"></i> Profil löschen</button>
                 </div>
             </div>
         </form>
