update new post

--- a/src/main/resources/templates/profilepage.html
+++ b/src/main/resources/templates/profilepage.html
@@ -133,10 +133,8 @@
                 <div class="new post">
                     <div class="message">
                         <label>
-                            <textarea name="content" placeholder="was geht up!"
-                                      autofocus="autofocus"
-                                      rows="8" cols="75" maxlength="255">
-                            </textarea>
+                            <textarea name="content" placeholder="was geht up!" autofocus="autofocus" rows="8"
+                                      cols="75" maxlength="255"></textarea>
                         </label>
                     </div>
                     <div class="submit">
